Fix invalid input for friction on calculator.html

--- a/404.html
+++ b/404.html
@@ -65,7 +65,7 @@
     <h2 class="align-center pt-4 mt-4">Whoa there! You've come right into a dilemma zone!</h2>
     <p class="align-center"><img src="assets/images/hazard.png" alt="Hazard sign" class="hazard-sign img-fluid"></p>
     <h2 class="align-center">But we have your options covered. </h2>
-    <p class="align-center pb-5 mb-5"><a href="index.html"><button class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</button></a></p>
+    <p class="align-center pb-5 mb-5"><a href="index.html"><span class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</span></a></p>
   </section>
 <div class="mb-1"></div>
 
@@ -128,7 +128,6 @@
 
   </footer>
   <!-- Footer -->
-
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
