--- a/contact.html
+++ b/contact.html
@@ -98,14 +98,14 @@
         <!-- Email Form-->
         <div class="col-12 content-div">
           <div class="form-group">
-            <label for="intputName">Your name</label>
+            <label for="inputName">Your name</label>
             <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
-            <label for="intputEmailAddress">Email address</label>
+            <label for="inputEmailAddress">Email address</label>
             <input type="email" class="form-control" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
             <small id="emailHelp">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
-            <label for="message">Message</label>
+            <label for="userRequest">Message</label>
             <textarea rows="10" name="calculator_request" class="form-control" id="userRequest" placeholder="Input your suggestions" required></textarea>
           </div>
 
@@ -179,7 +179,6 @@
 
   </footer>
   <!-- Footer -->
-
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
