--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -195,23 +202,24 @@
 
   <!-- About the author -->
   <section>
-<div class="container">
-<div class="row pb-3"></div>
-<div class="row pb-2">
-<div class="media">
-<!-- Author image appears on the left on medium and large devices -->
-  <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block" src="assets/images/author-questions.png" alt="The author">
-  <div class="media-body">
-    <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
-    <!-- Author image appears next to header on small devices -->
-    <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none" src="assets/images/author-questions-small.jpg" alt="The author">
-    <p class="mx-2">Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national curriculms of New Zealand, Australia and Sweden.</p>
-    <p class="mb-0 mx-2">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's 
-    passion for differentiation and full classroom inclusion with easy, self guided instruction, and Physics Code is born.</p>
-  </div>
-</div>
-</div>
-</div>
+    <div class="container">
+      <div class="row pb-3"></div>
+      <div class="row pb-2">
+        <div class="media">
+          <!-- Author image appears on the left on medium and large devices -->
+          <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block" src="assets/images/author-questions.png" alt="The author">
+          <div class="media-body">
+            <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
+            <!-- Author image appears next to header on small devices -->
+            <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none" src="assets/images/author-questions-small.jpg" alt="The author">
+            <p class="mx-2">Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national 
+            curriculms of New Zealand, Australia and Sweden.</p>
+            <p class="mb-0 mx-2">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's
+              passion for differentiation and full classroom inclusion with easy, self guided instruction, and Physics Code is born.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </section>
 
@@ -262,7 +270,8 @@
     <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
       <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
 
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
@@ -281,7 +290,7 @@
   <script src="assets/scripts/dependencies.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="jH6xsmAN"></script>
-  
+
 </body>
 
 </html>
