Fix navbar toggler on index page

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button 
+       <button 
       class="navbar-toggler" 
       type="button" 
       data-toggle="collapse" 
-      data-target="navbarNav" 
+      data-target="#navbarNav" 
       aria-controls="navbarNav" 
       aria-expanded="false" 
       aria-label="Toggle navigation">
