Remove onclicks in html and add eventListeners in JS on game.html and js

--- a/game.html
+++ b/game.html
@@ -109,7 +109,7 @@
             <h5 class="card-title heading-center remove_start" id="ready_to_brake">Get ready to brake!</h5>
             <br>
             <div class="container text-center">
-              <button class="btn btn-danger btn-lg btn--padding" id="start_button" onclick="makeGreen(); setTimerAmount()">Start</button>
+              <button class="btn btn-danger btn-lg btn--padding" id="start_button">Start</button>
               <button type="submit" class="btn btn-danger btn-lg btn_hide_brakes" id="brake_button">Brakes</button>
             </div>
           </div>
@@ -133,8 +133,8 @@
           <p class="best_score_text" id="best_score"></p>
         </div>
         <div class="modal-footer">
-          <button type="button" id="share_button" onclick="share_result()" class="btn fb--button"><i class="fab fa-facebook-f fa-lg mr-2"></i>Share</button>
-          <button type="button" id="restart_test" onclick="reset_timer()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
+          <button type="button" id="share_button" class="btn fb--button"><i class="fab fa-facebook-f fa-lg mr-2"></i>Share</button>
+          <button type="button" id="restart_test" class="btn btn-secondary" data-dismiss="modal">Reset</button>
         </div>
       </div>
     </div>
