--- a/test_yourself.html
+++ b/test_yourself.html
@@ -485,8 +485,9 @@
               max="99999"
               step="0.01"
               aria-label="input value for your zone" 
-              placeholder="e.g 12.34">
-              <div class="input-group-append">
+              placeholder="e.g 12.34"
+              required>
+              <div class="input-group-append d-block">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
@@ -562,8 +563,9 @@
               max="99999"
               step="0.01" 
               aria-label="input value for your zone"
-              placeholder="e.g 12.34">
-              <div class="input-group-append">
+              placeholder="e.g 12.34"
+              required>
+              <div class="input-group-append d-block">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
@@ -639,8 +641,9 @@
               max="99999"
               step="0.01" 
               aria-label="input value for your zone"
-              placeholder="e.g 12.34">
-              <div class="input-group-append">
+              placeholder="e.g 12.34"
+              required>
+              <div class="input-group-append d-block">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
@@ -716,8 +719,9 @@
               max="99999"
               step="0.01" 
               aria-label="input value for your zone"
-              placeholder="e.g 12.34">
-              <div class="input-group-append">
+              placeholder="e.g 12.34"
+              required>
+              <div class="input-group-append d-block">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
@@ -793,9 +797,10 @@
               max="99999"
               step="0.01" 
               aria-label="input value for your zone" 
-              placeholder="e.g 12.34">
-              <div class="input-group-append">
-                <button type="submit" class="btn btn-danger" aria-label="reset your value">Reset5</button>
+              placeholder="e.g 12.34"
+              required>
+              <div class="input-group-append d-block">
+                <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
