Adjust validity checker for input on test_yourself.js functional but slow

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -484,6 +484,7 @@
               min="0"
               max="99999"
               step="0.01"
+              value=""
               aria-label="input value for your zone" 
               placeholder="e.g 12.34"
               required>
@@ -498,7 +499,7 @@
           <div><span id="mapOneResultThree"></span></div>
         </div> <!-- End of the first modal-->
         <div class="modal-footer">
-          <input type="submit" id="mapOneSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="mapOneSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit" disabled>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
